--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,16 @@
       "src": "/assets/icons/icon144x144.png",
       "type": "image/png",
       "sizes": "144x144"
+    },
+    {
+      "src": "/assets/icons/icon192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/assets/icons/icon512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": "/index.html",
