--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/fjogeleit/pwa-example#readme",
   "devDependencies": {
     "http-server": "^0.11.1",
-    "workbox-cli": "^3.0.0-beta.2"
+    "workbox-cli": "^3.1.0"
   }
 }
